--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,22 @@
 {
-  "name": "magento/module-message-queue",
-  "description": "N/A",
-  "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/framework": "100.0.0",
-    "magento/magento-composer-installer": "*"
-  },
-  "type": "magento2-module",
-  "version": "100.0.0",
-  "license": [
-    "proprietary"
-  ],
-  "autoload": {
-    "files": [ "registration.php" ],
-    "psr-4": {
-      "Magento\\MessageQueue\\": ""
+    "name": "magento/module-message-queue",
+    "description": "N/A",
+    "require": {
+        "php": "~5.5.0|~5.6.0|~7.0.0",
+        "magento/framework": "100.0.*",
+        "magento/magento-composer-installer": "*"
+    },
+    "type": "magento2-module",
+    "version": "100.0.1",
+    "license": [
+        "proprietary"
+    ],
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "Magento\\MessageQueue\\": ""
+        }
     }
-  }
 }
