--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,21 @@
     "name": "magento/framework-message-queue",
     "description": "N/A",
     "type": "magento2-library",
-    "version": "100.0.0",
+    "version": "100.0.1",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
     ],
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/framework": "100.0.0"
+        "magento/framework": "100.0.*"
     },
     "autoload": {
         "psr-4": {
             "Magento\\Framework\\MessageQueue\\": ""
         },
-        "files": [ "registration.php" ]
+        "files": [
+            "registration.php"
+        ]
     }
 }
