MAGETWO-45551: Contribution to Mainline
- fixed composer.json (removed auto-generated "_empty_" string)

--- a/composer.json
+++ b/composer.json
@@ -223,7 +223,7 @@
             "Magento\\": "app/code/Magento/"
         },
         "psr-0": {
-            "_empty_": "app/code/"
+            "": "app/code/"
         },
         "files": [
             "app/etc/NonComposerComponentRegistration.php"
