--- a/app/code/Magento/Ui/composer.json
+++ b/app/code/Magento/Ui/composer.json
@@ -6,7 +6,8 @@
         "magento/module-backend": "100.0.*",
         "magento/framework": "100.0.*",
         "magento/module-eav": "100.0.*",
-        "magento/module-authorization": "100.0.*"
+        "magento/module-authorization": "100.0.*",
+        "magento/module-user": "100.0.*"
     },
     "type": "magento2-module",
     "version": "100.0.1",
