MAGETWO-45636: Magento 2.0.0 Publication

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "repositories": [
         {
             "type": "composer",
-            "url": "http://packages.magento.com/"
+            "url": "http://repo.magento.com/"
         }
     ],
     "require": {
