--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "magento/module-store": "100.0.*",
         "magento/module-catalog": "100.0.*",
         "magento/module-catalog-search": "100.0.*",
-        "magento/module-config": "100.0.*"   
+        "magento/module-config": "100.0.*",
+        "magento/module-customer": "100.0.*"
     },
     "type": "magento2-module",
     "version": "100.0.2",
