--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/module-advanced-search": "100.0.*",
+        "magento/module-catalog": "100.0.*",
+        "magento/module-catalog-search": "100.0.*",
+        "magento/module-customer": "100.0.*",
+        "magento/module-eav": "100.0.*",
+        "magento/module-store": "100.0.*",
         "magento/framework": "100.0.*",
         "elasticsearch/elasticsearch": "~2.0"
     },
