--- a/nginx/conf.d/extra_protect.conf
+++ b/nginx/conf.d/extra_protect.conf
@@ -1,5 +1,5 @@
 # deny all internal locations also default phpmyadmin
-location ~ /(app|bin|var|phpserver|vendor|php[mM]y[aA]dmin|pma)/ { deny all; }
+location ~ /(app|bin|var|nginx|phpserver|vendor|php[mM]y[aA]dmin|pma)/ { deny all; }
 
 # deny access per default .htaccess rules
 location ~ /media/(customer/|downloadable/|import/|theme_customization/.*\.xml) { deny all; }
