--- a/composer.json
+++ b/composer.json
@@ -168,6 +168,7 @@
         "magento/module-user": "100.0.2",
         "magento/module-usps": "100.0.2",
         "magento/module-variable": "100.0.2",
+        "magento/module-vault": "100.0.2",
         "magento/module-version": "100.0.2",
         "magento/module-webapi": "100.0.2",
         "magento/module-weee": "100.0.2",
