simplify assets management

--- a/nginx/conf.d/assets.conf
+++ b/nginx/conf.d/assets.conf
@@ -1,5 +1,5 @@
 	## images
-	location ~* (static|media)/.*\.(jpg|jpeg|png|gif|svg|js|css|ico|txt)$ {
+	location ~* /(static|media)/.*\.(jpg|jpeg|png|gif|svg|js|css|ico|txt)$ {
 		expires max;
 		log_not_found off;
 		access_log off;
@@ -8,7 +8,7 @@
 		}
 
 	## fonts
-	location ~* (static|media)/.*\.(swf|eot|ttf|otf|woff|woff2)$ {
+	location ~* /(static|media)/.*\.(swf|eot|ttf|otf|woff|woff2)$ {
 		expires max;
 		log_not_found off;
 		access_log off;
