simplify assets management

--- a/nginx/sites-available/magento2.conf
+++ b/nginx/sites-available/magento2.conf
@@ -46,18 +46,14 @@ server {
 		try_files $uri $uri/ /index.php?$args;
 		}
 
+	## Static and media assets 
+	include /etc/nginx/conf.d/assets.conf;
+
 	## Static location
-	location /static/ {
-		include /etc/nginx/conf.d/assets.conf;
-		try_files $uri $uri/ @static;
-		}
-	location @static {
-		rewrite /static/(version\d*/)?(.*)$ /static.php?resource=$2 last;
-		}
+	rewrite /static/(version\d*/)?(.*)$ /static/$2 last;
 	
 	## Media location
 	location /media/ {
-		include /etc/nginx/conf.d/assets.conf;
 		try_files $uri $uri/ /get.php?$args;
 		}
   
