gzip and mime types update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,6 +13,7 @@ events {
 http   {
     index         index.html index.php;
     include       /etc/nginx/mime.types;
+    types { application/font-woff2  woff2; }
     default_type  application/octet-stream;
     
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" ';
@@ -39,7 +40,7 @@ http   {
     gzip                on;
     gzip_vary           on;
     gzip_proxied        any;
-    gzip_types          application/javascript application/x-javascript text/javascript text/css application/rss+xml;
+    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css image/svg+xml;
     gzip_buffers        16 8k;
     gzip_comp_level     6;
     
