--- a/nginx/conf.d/spider.conf
+++ b/nginx/conf.d/spider.conf
@@ -24,5 +24,6 @@ map $http_user_agent $bad_client {
   ~*(voltron|Vagabondo|VoidEYE) 1;
   ~*(webalta|WebAuto|[Ww]eb[Bb]andit|WebCollage|WebCopier|WebFetch|WebLeacher|WebReaper|WebSauger|WebStripper|WebWhacker|WhatsApp) 1;
   ~*(WebZIP|Wget|Widow|Wotbox|WWW-Mechanize|WWWOFFLE) 1;
+  ~*(XSpider) 1;
   ~*(zermelo|Zeus|Zeus.*Webster|ZyBorg) 1;
 }
