gzip and mime types update

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ http   {
     gzip                on;
     gzip_vary           on;
     gzip_proxied        any;
-    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css image/svg+xml;
+    gzip_types          application/javascript application/x-javascript application/rss+xml text/javascript text/css image/x-icon image/svg+xml;
     gzip_buffers        16 8k;
     gzip_comp_level     6;
     
