--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,7 +48,7 @@ http   {
     #ssl_session_cache		shared:SSL:45m;
     #ssl_session_timeout	15m;
     #ssl_protocols		TLSv1 TLSv1.1 TLSv1.2;
-    #ssl_ciphers               "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS !RC4";
+    #ssl_ciphers                "ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5";
     #ssl_prefer_server_ciphers	on;
     #ssl_dhparam 		/etc/ssl/certs/dhparams.pem;
     
