--- a/app/code/Magento/BraintreeTwo/composer.json
+++ b/app/code/Magento/BraintreeTwo/composer.json
@@ -5,12 +5,14 @@
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/framework": "*",
         "magento/magento-composer-installer": "*",
+        "magento/module-customer": "*",
         "magento/module-config": "*",
         "magento/module-directory": "*",
         "magento/module-payment": "*",
         "magento/module-checkout": "*",
         "magento/module-sales": "*",
         "magento/module-backend": "*",
+        "magento/module-vault": "*",
         "braintree/braintree_php": "3.7.0"
     },
     "type": "magento2-module",
