--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,62 @@
         "ext-zip": "*",
         "ext-pdo_mysql": "*",
         "ext-soap": "*",
-        "ramsey/uuid": "~3.7.3"
+        "ext-spl": "*",
+        "ext-xsl": "*",
+        "ext-zip": "*",
+        "lib-libxml": "*",
+        "ext-fileinfo": "*",
+        "braintree/braintree_php": "3.35.0",
+        "colinmollenhour/cache-backend-file": "~1.4.1",
+        "colinmollenhour/cache-backend-redis": "1.10.5",
+        "colinmollenhour/credis": "1.10.0",
+        "colinmollenhour/php-redis-session-abstract": "~1.4.0",
+        "composer/composer": "^1.6",
+        "elasticsearch/elasticsearch": "~2.0|~5.1",
+        "magento/composer": "~1.4.0",
+        "magento/magento-composer-installer": ">=0.1.11",
+        "magento/zendframework1": "~1.14.1",
+        "monolog/monolog": "^1.17",
+        "oyejorge/less.php": "~1.7.0",
+        "paragonie/sodium_compat": "^1.6",
+        "pelago/emogrifier": "^2.0.0",
+        "php-amqplib/php-amqplib": "~2.7.0",
+        "phpseclib/mcrypt_compat": "1.0.8",
+        "phpseclib/phpseclib": "2.0.*",
+        "ramsey/uuid": "~3.8.0",
+        "symfony/console": "~4.1.0",
+        "symfony/event-dispatcher": "~4.1.0",
+        "symfony/process": "~4.1.0",
+        "tedivm/jshrink": "~1.3.0",
+        "tubalmartin/cssmin": "4.1.1",
+        "webonyx/graphql-php": "^0.12.6",
+        "zendframework/zend-captcha": "^2.7.1",
+        "zendframework/zend-code": "~3.3.0",
+        "zendframework/zend-config": "^2.6.0",
+        "zendframework/zend-console": "^2.6.0",
+        "zendframework/zend-crypt": "^2.6.0",
+        "zendframework/zend-db": "^2.8.2",
+        "zendframework/zend-di": "^2.6.1",
+        "zendframework/zend-eventmanager": "^2.6.3",
+        "zendframework/zend-feed": "^2.9.0",
+        "zendframework/zend-form": "^2.10.0",
+        "zendframework/zend-http": "^2.6.0",
+        "zendframework/zend-i18n": "^2.7.3",
+        "zendframework/zend-json": "^2.6.1",
+        "zendframework/zend-log": "^2.9.1",
+        "zendframework/zend-mail": "^2.9.0",
+        "zendframework/zend-modulemanager": "^2.7",
+        "zendframework/zend-mvc": "~2.7.0",
+        "zendframework/zend-serializer": "^2.7.2",
+        "zendframework/zend-server": "^2.6.1",
+        "zendframework/zend-servicemanager": "^2.7.8",
+        "zendframework/zend-session": "^2.7.3",
+        "zendframework/zend-soap": "^2.7.0",
+        "zendframework/zend-stdlib": "^2.7.7",
+        "zendframework/zend-text": "^2.6.0",
+        "zendframework/zend-uri": "^2.5.1",
+        "zendframework/zend-validator": "^2.6.0",
+        "zendframework/zend-view": "~2.10.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~6.2.0",
