Added module-inventory-source-selection-admin-ui to composer.json

--- a/composer.json
+++ b/composer.json
@@ -208,6 +208,7 @@
         "magento/module-inventory-source-deduction-api": "*",
         "magento/module-inventory-source-selection-api": "*",
         "magento/module-inventory-source-selection": "*",
+        "magento/module-inventory-source-selection-admin-ui": "*",
         "magento/module-layered-navigation": "*",
         "magento/module-media-storage": "*",
         "magento/module-message-queue": "*",
