MAGETWO-93424: Permanent Redirect for old URL missing via API or no documentation

--- a/app/code/Magento/CatalogUrlRewrite/composer.json
+++ b/app/code/Magento/CatalogUrlRewrite/composer.json
@@ -13,6 +13,9 @@
         "magento/framework": "101.0.*",
         "magento/module-ui": "101.0.*"
     },
+    "suggest": {
+        "magento/module-webapi": "*"
+    },
     "type": "magento2-module",
     "version": "100.2.5",
     "license": [
