--- a/dev/tests/integration/testsuite/Magento/Framework/Code/_expected71/SourceClassWithNamespaceInterceptor.php.sample
+++ b/dev/tests/integration/testsuite/Magento/Framework/Code/_expected71/SourceClassWithNamespaceInterceptor.php.sample
@@ -1,13 +1,13 @@
 <?php
-namespace Magento\Framework\Code\GeneratorTest\SourceClassWithNamespace;
+namespace Magento\Framework\Code\Generator71Test\SourceClassWithNamespace;
 
 /**
- * Interceptor class for @see \Magento\Framework\Code\GeneratorTest\SourceClassWithNamespace
+ * Interceptor class for @see \Magento\Framework\Code\Generator71Test\SourceClassWithNamespace
  *
  * Copyright © Magento, Inc. All rights reserved.
  * See COPYING.txt for license details.
  */
-class Interceptor extends \Magento\Framework\Code\GeneratorTest\SourceClassWithNamespace implements \Magento\Framework\Interception\InterceptorInterface
+class Interceptor extends \Magento\Framework\Code\Generator71Test\SourceClassWithNamespace implements \Magento\Framework\Interception\InterceptorInterface
 {
     use \Magento\Framework\Interception\Interceptor;
 
@@ -59,7 +59,33 @@ class Interceptor extends \Magento\Framework\Code\GeneratorTest\SourceClassWithN
     /**
      * {@inheritdoc}
      */
-    public function publicWithSelf($arg = false) : \Magento\Framework\Code\GeneratorTest\SourceClassWithNamespace
+    public function public71($arg1, string $arg2, ?int $arg3, ?int $arg4 = null) : void
+    {
+        $pluginInfo = $this->pluginList->getNext($this->subjectType, 'public71');
+        if (!$pluginInfo) {
+            parent::public71($arg1, $arg2, $arg3, $arg4);
+        } else {
+            $this->___callPlugins('public71', func_get_args(), $pluginInfo);
+        }
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function public71Another(?\DateTime $arg1, $arg2 = false) : ?string
+    {
+        $pluginInfo = $this->pluginList->getNext($this->subjectType, 'public71Another');
+        if (!$pluginInfo) {
+            return parent::public71Another($arg1, $arg2);
+        } else {
+            return $this->___callPlugins('public71Another', func_get_args(), $pluginInfo);
+        }
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function publicWithSelf($arg = false) : \Magento\Framework\Code\Generator71Test\SourceClassWithNamespace
     {
         $pluginInfo = $this->pluginList->getNext($this->subjectType, 'publicWithSelf');
         if (!$pluginInfo) {
