--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "colinmollenhour/php-redis-session-abstract": "1.3.4",
         "colinmollenhour/cache-backend-redis": "1.10.4",
         "colinmollenhour/cache-backend-file": "1.4",
-        "composer/composer": "1.4.1",
+        "composer/composer": "^1.4.1",
         "monolog/monolog": "^1.17",
         "oyejorge/less.php": "~1.7.0",
         "pelago/emogrifier": "^2.0.0",
