--- a/dev/tests/acceptance/.gitignore
+++ b/dev/tests/acceptance/.gitignore
@@ -6,5 +6,6 @@ tests/_output/*
 tests/functional.suite.yml
 tests/functional/Magento/FunctionalTest/_generated
 vendor/*
-mftf.logm
+mftf.log
 /utils/
+.credentials.example
