MAGETWO-96761: Integration of Allure reports to PHP Unit Tests

--- a/dev/tests/unit/phpunit.xml.dist
+++ b/dev/tests/unit/phpunit.xml.dist
@@ -51,6 +51,9 @@
                     <element key="codingStandardsIgnoreEnd">
                         <string>codingStandardsIgnoreEnd</string>
                     </element>
+                    <element key="codingStandardsIgnoreFile">
+                        <string>codingStandardsIgnoreEnd</string>
+                    </element>
                     <element key="cover">
                         <string>cover</string>
                     </element>
