MAGETWO-95402: Incorrect send-friend feature flow

--- a/dev/tests/integration/etc/install-config-mysql.php.dist
+++ b/dev/tests/integration/etc/install-config-mysql.php.dist
@@ -5,9 +5,9 @@
  */
 
 return [
-    'db-host' => 'mysql',
+    'db-host' => 'localhost',
     'db-user' => 'root',
-    'db-password' => 'root',
+    'db-password' => '123123q',
     'db-name' => 'magento_integration_tests',
     'db-prefix' => '',
     'backend-frontname' => 'backend',
