--- a/dev/tests/api-functional/phpunit_rest.xml.dist
+++ b/dev/tests/api-functional/phpunit_rest.xml.dist
@@ -58,7 +58,7 @@
     <!-- Test listeners -->
     <listeners>
         <listener class="Magento\TestFramework\Event\PhpUnit"/>
-        <listener class="Yandex\Allure\Adapter\AllureAdapter" file="../../../vendor/allure-framework/allure-phpunit/src/Yandex/Allure/Adapter/AllureAdapter.php">
+        <listener class="Yandex\Allure\Adapter\AllureAdapter">
             <arguments>
                 <string>var/allure-results</string> <!-- XML files output folder -->
                 <boolean>true</boolean> <!-- Whether to delete previous results on rerun -->
