--- a/dev/tests/setup-integration/framework/tests/unit/phpunit.xml.dist
+++ b/dev/tests/setup-integration/framework/tests/unit/phpunit.xml.dist
@@ -22,7 +22,7 @@
         <ini name="date.timezone" value="America/Los_Angeles"/>
     </php>
     <listeners>
-        <listener class="Yandex\Allure\Adapter\AllureAdapter" file="../../../../../../vendor/allure-framework/allure-phpunit/src/Yandex/Allure/Adapter/AllureAdapter.php">
+        <listener class="Yandex\Allure\Adapter\AllureAdapter">
             <arguments>
                 <string>var/allure-results</string> <!-- XML files output directory -->
                 <boolean>true</boolean> <!-- Whether to delete previous results on rerun -->
