Keep dependencies in composer.json sections sorted alphabetically

--- a/composer.json
+++ b/composer.json
@@ -111,7 +111,19 @@
         "ext-pcntl": "Need for run processes in parallel mode"
     },
     "replace": {
-        "magento/module-marketplace": "*",
+        "components/jquery": "1.11.0",
+        "components/jqueryui": "1.10.4",
+        "magento/framework": "*",
+        "magento/framework-amqp": "*",
+        "magento/framework-bulk": "*",
+        "magento/framework-message-queue": "*",
+        "magento/language-de_de": "*",
+        "magento/language-en_us": "*",
+        "magento/language-es_es": "*",
+        "magento/language-fr_fr": "*",
+        "magento/language-nl_nl": "*",
+        "magento/language-pt_br": "*",
+        "magento/language-zh_hans_cn": "*",
         "magento/module-admin-analytics": "*",
         "magento/module-admin-notification": "*",
         "magento/module-advanced-pricing-import-export": "*",
@@ -120,8 +132,10 @@
         "magento/module-analytics": "*",
         "magento/module-application-performance-monitor": "*",
         "magento/module-application-performance-monitor-new-relic": "*",
+        "magento/module-async-config": "*",
         "magento/module-asynchronous-operations": "*",
         "magento/module-authorization": "*",
+        "magento/module-aws-s3": "*",
         "magento/module-backend": "*",
         "magento/module-backup": "*",
         "magento/module-bundle": "*",
@@ -131,36 +145,43 @@
         "magento/module-captcha": "*",
         "magento/module-cardinal-commerce": "*",
         "magento/module-catalog": "*",
-        "magento/module-catalog-customer-graph-ql": "*",
         "magento/module-catalog-analytics": "*",
+        "magento/module-catalog-cms-graph-ql": "*",
+        "magento/module-catalog-customer-graph-ql": "*",
+        "magento/module-catalog-graph-ql": "*",
         "magento/module-catalog-import-export": "*",
         "magento/module-catalog-inventory": "*",
         "magento/module-catalog-inventory-graph-ql": "*",
         "magento/module-catalog-rule": "*",
-        "magento/module-catalog-rule-graph-ql": "*",
         "magento/module-catalog-rule-configurable": "*",
+        "magento/module-catalog-rule-graph-ql": "*",
         "magento/module-catalog-search": "*",
         "magento/module-catalog-url-rewrite": "*",
+        "magento/module-catalog-url-rewrite-graph-ql": "*",
         "magento/module-catalog-widget": "*",
         "magento/module-checkout": "*",
         "magento/module-checkout-agreements": "*",
         "magento/module-checkout-agreements-graph-ql": "*",
         "magento/module-cms": "*",
+        "magento/module-cms-graph-ql": "*",
         "magento/module-cms-url-rewrite": "*",
+        "magento/module-cms-url-rewrite-graph-ql": "*",
         "magento/module-compare-list-graph-ql": "*",
         "magento/module-config": "*",
-        "magento/module-async-config": "*",
         "magento/module-configurable-import-export": "*",
         "magento/module-configurable-product": "*",
+        "magento/module-configurable-product-graph-ql": "*",
         "magento/module-configurable-product-sales": "*",
         "magento/module-contact": "*",
         "magento/module-contact-graph-ql": "*",
         "magento/module-cookie": "*",
         "magento/module-cron": "*",
+        "magento/module-csp": "*",
         "magento/module-currency-symbol": "*",
         "magento/module-customer": "*",
         "magento/module-customer-analytics": "*",
         "magento/module-customer-downloadable-graph-ql": "*",
+        "magento/module-customer-graph-ql": "*",
         "magento/module-customer-import-export": "*",
         "magento/module-deploy": "*",
         "magento/module-developer": "*",
@@ -171,7 +192,7 @@
         "magento/module-downloadable-graph-ql": "*",
         "magento/module-downloadable-import-export": "*",
         "magento/module-eav": "*",
-        "magento/module-open-search": "*",
+        "magento/module-eav-graph-ql": "*",
         "magento/module-elasticsearch": "*",
         "magento/module-elasticsearch-7": "*",
         "magento/module-email": "*",
@@ -181,33 +202,23 @@
         "magento/module-gift-message-graph-ql": "*",
         "magento/module-google-adwords": "*",
         "magento/module-google-analytics": "*",
-        "magento/module-google-optimizer": "*",
         "magento/module-google-gtag": "*",
+        "magento/module-google-optimizer": "*",
         "magento/module-graph-ql": "*",
         "magento/module-graph-ql-cache": "*",
         "magento/module-graph-ql-new-relic": "*",
         "magento/module-graph-ql-resolver-cache": "*",
-        "magento/module-catalog-graph-ql": "*",
-        "magento/module-catalog-cms-graph-ql": "*",
-        "magento/module-catalog-url-rewrite-graph-ql": "*",
-        "magento/module-configurable-product-graph-ql": "*",
-        "magento/module-customer-graph-ql": "*",
-        "magento/module-eav-graph-ql": "*",
-        "magento/module-swatches-graph-ql": "*",
-        "magento/module-tax-graph-ql": "*",
-        "magento/module-url-rewrite-graph-ql": "*",
-        "magento/module-cms-url-rewrite-graph-ql": "*",
-        "magento/module-weee-graph-ql": "*",
-        "magento/module-cms-graph-ql": "*",
+        "magento/module-grouped-catalog-inventory": "*",
         "magento/module-grouped-import-export": "*",
         "magento/module-grouped-product": "*",
-        "magento/module-grouped-catalog-inventory": "*",
         "magento/module-grouped-product-graph-ql": "*",
         "magento/module-import-export": "*",
         "magento/module-indexer": "*",
         "magento/module-instant-purchase": "*",
         "magento/module-integration": "*",
         "magento/module-integration-graph-ql": "*",
+        "magento/module-jwt-framework-adapter": "*",
+        "magento/module-jwt-user-token": "*"
         "magento/module-layered-navigation": "*",
         "magento/module-login-as-customer": "*",
         "magento/module-login-as-customer-admin-ui": "*",
@@ -216,33 +227,34 @@
         "magento/module-login-as-customer-frontend-ui": "*",
         "magento/module-login-as-customer-graph-ql": "*",
         "magento/module-login-as-customer-log": "*",
-        "magento/module-login-as-customer-quote": "*",
         "magento/module-login-as-customer-page-cache": "*",
+        "magento/module-login-as-customer-quote": "*",
         "magento/module-login-as-customer-sales": "*",
+        "magento/module-marketplace": "*",
         "magento/module-media-content": "*",
         "magento/module-media-content-api": "*",
         "magento/module-media-content-catalog": "*",
         "magento/module-media-content-cms": "*",
-        "magento/module-media-gallery": "*",
-        "magento/module-media-gallery-api": "*",
-        "magento/module-media-gallery-ui": "*",
-        "magento/module-media-gallery-ui-api": "*",
-        "magento/module-media-gallery-integration": "*",
-        "magento/module-media-gallery-synchronization": "*",
-        "magento/module-media-gallery-synchronization-api": "*",
         "magento/module-media-content-synchronization": "*",
         "magento/module-media-content-synchronization-api": "*",
         "magento/module-media-content-synchronization-catalog": "*",
         "magento/module-media-content-synchronization-cms": "*",
-        "magento/module-media-gallery-synchronization-metadata": "*",
-        "magento/module-media-gallery-metadata": "*",
-        "magento/module-media-gallery-metadata-api": "*",
+        "magento/module-media-gallery": "*",
+        "magento/module-media-gallery-api": "*",
+        "magento/module-media-gallery-catalog": "*",
+        "magento/module-media-gallery-catalog-integration": "*",
         "magento/module-media-gallery-catalog-ui": "*",
         "magento/module-media-gallery-cms-ui": "*",
-        "magento/module-media-gallery-catalog-integration": "*",
-        "magento/module-media-gallery-catalog": "*",
+        "magento/module-media-gallery-integration": "*",
+        "magento/module-media-gallery-metadata": "*",
+        "magento/module-media-gallery-metadata-api": "*",
         "magento/module-media-gallery-renditions": "*",
         "magento/module-media-gallery-renditions-api": "*",
+        "magento/module-media-gallery-synchronization": "*",
+        "magento/module-media-gallery-synchronization-api": "*",
+        "magento/module-media-gallery-synchronization-metadata": "*",
+        "magento/module-media-gallery-ui": "*",
+        "magento/module-media-gallery-ui-api": "*",
         "magento/module-media-storage": "*",
         "magento/module-message-queue": "*",
         "magento/module-msrp": "*",
@@ -255,6 +267,7 @@
         "magento/module-newsletter-graph-ql": "*",
         "magento/module-offline-payments": "*",
         "magento/module-offline-shipping": "*",
+        "magento/module-open-search": "*",
         "magento/module-order-cancellation": "*",
         "magento/module-order-cancellation-graph-ql": "*",
         "magento/module-order-cancellation-ui": "*",
@@ -275,11 +288,12 @@
         "magento/module-quote-graph-ql": "*",
         "magento/module-related-product-graph-ql": "*",
         "magento/module-release-notification": "*",
+        "magento/module-remote-storage": "*",
         "magento/module-reports": "*",
         "magento/module-require-js": "*",
         "magento/module-review": "*",
-        "magento/module-review-graph-ql": "*",
         "magento/module-review-analytics": "*",
+        "magento/module-review-graph-ql": "*",
         "magento/module-robots": "*",
         "magento/module-rss": "*",
         "magento/module-rule": "*",
@@ -303,8 +317,10 @@
         "magento/module-swagger-webapi": "*",
         "magento/module-swagger-webapi-async": "*",
         "magento/module-swatches": "*",
+        "magento/module-swatches-graph-ql": "*",
         "magento/module-swatches-layered-navigation": "*",
         "magento/module-tax": "*",
+        "magento/module-tax-graph-ql": "*",
         "magento/module-tax-import-export": "*",
         "magento/module-theme": "*",
         "magento/module-theme-graph-ql": "*",
@@ -312,6 +328,7 @@
         "magento/module-ui": "*",
         "magento/module-ups": "*",
         "magento/module-url-rewrite": "*",
+        "magento/module-url-rewrite-graph-ql": "*",
         "magento/module-user": "*",
         "magento/module-usps": "*",
         "magento/module-variable": "*",
@@ -322,34 +339,17 @@
         "magento/module-webapi-async": "*",
         "magento/module-webapi-security": "*",
         "magento/module-weee": "*",
+        "magento/module-weee-graph-ql": "*",
         "magento/module-widget": "*",
         "magento/module-wishlist": "*",
-        "magento/module-wishlist-graph-ql": "*",
         "magento/module-wishlist-analytics": "*",
+        "magento/module-wishlist-graph-ql": "*",
         "magento/theme-adminhtml-backend": "*",
         "magento/theme-frontend-blank": "*",
         "magento/theme-frontend-luma": "*",
-        "magento/language-de_de": "*",
-        "magento/language-en_us": "*",
-        "magento/language-es_es": "*",
-        "magento/language-fr_fr": "*",
-        "magento/language-nl_nl": "*",
-        "magento/language-pt_br": "*",
-        "magento/language-zh_hans_cn": "*",
-        "magento/framework": "*",
-        "magento/framework-amqp": "*",
-        "magento/framework-bulk": "*",
-        "magento/framework-message-queue": "*",
-        "trentrichardson/jquery-timepicker-addon": "1.4.3",
-        "components/jquery": "1.11.0",
-        "components/jqueryui": "1.10.4",
-        "twbs/bootstrap": "3.1.0",
         "tinymce/tinymce": "3.4.7",
-        "magento/module-csp": "*",
-        "magento/module-aws-s3": "*",
-        "magento/module-remote-storage": "*",
-        "magento/module-jwt-framework-adapter": "*",
-        "magento/module-jwt-user-token": "*"
+        "trentrichardson/jquery-timepicker-addon": "1.4.3",
+        "twbs/bootstrap": "3.1.0"
     },
     "conflict": {
         "gene/bluefoot": "*"
