--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,14 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type" : "vcs",
+            "url" : "git@github.com:magento-gl/composer.git"
+        }
+    ],
     "require": {
-        "php": "~8.1.0||~8.2.0",
+        "php": "~8.1.0||~8.2.0||~8.3.0",
         "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
@@ -42,24 +48,21 @@
         "composer/composer": "^2.0, !=2.2.16",
         "doctrine/annotations": "^2.0",
         "elasticsearch/elasticsearch": "~7.17.0 || ~8.5.0",
-        "ezyang/htmlpurifier": "^4.16",
+        "ezyang/htmlpurifier": "dev-master",
         "guzzlehttp/guzzle": "^7.5",
-        "laminas/laminas-captcha": "^2.12",
-        "laminas/laminas-code": "^4.5",
-        "laminas/laminas-db": "^2.15",
-        "laminas/laminas-di": "^3.7",
-        "laminas/laminas-escaper": "^2.10",
-        "laminas/laminas-eventmanager": "^3.5",
-        "laminas/laminas-feed": "^2.17",
-        "laminas/laminas-file": "^2.11",
-        "laminas/laminas-filter": "^2.17",
+        "laminas/laminas-captcha": "^2.17",
+        "laminas/laminas-code": "^4.13",
+        "laminas/laminas-di": "^3.13",
+        "laminas/laminas-escaper": "^2.13",
+        "laminas/laminas-eventmanager": "^3.11",
+        "laminas/laminas-feed": "^2.22",
+        "laminas/laminas-filter": "^2.33",
         "laminas/laminas-http": "^2.15",
         "laminas/laminas-i18n": "^2.17",
         "laminas/laminas-mail": "^2.16",
         "laminas/laminas-mime": "^2.9",
         "laminas/laminas-modulemanager": "^2.11",
-        "laminas/laminas-mvc": "^3.3",
-        "laminas/laminas-oauth": "^2.4",
+        "laminas/laminas-mvc": "^3.6",
         "laminas/laminas-permissions-acl": "^2.10",
         "laminas/laminas-servicemanager": "^3.16",
         "laminas/laminas-soap": "^2.10",
@@ -68,7 +71,7 @@
         "laminas/laminas-validator": "^2.23",
         "league/flysystem": "^2.4",
         "league/flysystem-aws-s3-v3": "^2.4",
-        "magento/composer": "^1.9.0",
+        "magento/composer": "dev-AC-9499",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
         "magento/magento-composer-installer": ">=0.4.0",
         "magento/zend-cache": "^1.16",
@@ -76,7 +79,7 @@
         "magento/zend-pdf": "^1.16",
         "monolog/monolog": "^2.7",
         "opensearch-project/opensearch-php": "^1.0 || ^2.0, <2.0.1",
-        "pelago/emogrifier": "^7.0",
+        "pelago/emogrifier": "dev-main",
         "php-amqplib/php-amqplib": "^3.2",
         "phpseclib/mcrypt_compat": "^2.0",
         "phpseclib/phpseclib": "^3.0",
