AC-9670::Adobe Commerce 2.4.7 core code is compatible with PHP 8.3

--- a/lib/internal/Magento/Framework/composer.json
+++ b/lib/internal/Magento/Framework/composer.json
@@ -25,11 +25,11 @@
         "lib-libxml": "*",
         "colinmollenhour/php-redis-session-abstract": "^1.5",
         "composer/composer": "^2.0, !=2.2.16",
-        "ezyang/htmlpurifier": "dev-master",
+        "ezyang/htmlpurifier": "^4.17",
         "guzzlehttp/guzzle": "^7.5",
         "laminas/laminas-code": "^4.5",
         "laminas/laminas-escaper": "^2.10",
-        "laminas/laminas-file": "^2.11",
+        "laminas/laminas-file": "dev-php8.3_support",
         "laminas/laminas-filter": "^2.17",
         "laminas/laminas-http": "^2.15",
         "laminas/laminas-i18n": "^2.17",
@@ -37,7 +37,7 @@
         "laminas/laminas-mime": "^2.9",
         "laminas/laminas-permissions-acl": "^2.10",
         "laminas/laminas-stdlib": "^3.11",
-        "laminas/laminas-oauth": "^2.4",
+        "laminas/laminas-oauth": "dev-php8.3_support",
         "laminas/laminas-uri": "^2.9",
         "laminas/laminas-validator": "^2.23",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
