AC-9670::Adobe Commerce 2.4.7 core code is compatible with PHP 8.3

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
         },
         {
             "type": "vcs",
+            "url": "git@github.com:magento-gl/magento-coding-standard.git"
+        },
+        {
+            "type": "vcs",
             "url": "git@github.com:glo71317/laminas-db.git"
         }
     ],
@@ -107,7 +111,7 @@
         "dg/bypass-finals": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.22",
         "lusitanian/oauth": "^0.8",
-        "magento/magento-coding-standard": "*",
+        "magento/magento-coding-standard": "dev-AC-9670",
         "magento/magento2-functional-testing-framework": "^4.4.2",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
