--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,6 @@
         "OSL-3.0",
         "AFL-3.0"
     ],
-    "repositories": {
-        "ext": {
-            "type": "path",
-            "url": "./ext/*/*/*"
-        },
-        "0": {
-            "type": "vcs",
-            "url": "https://github.com/magento-gl/magento2-functional-testing-framework"
-        }
-    },
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true,
@@ -26,6 +16,12 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/magento-gl/magento2-functional-testing-framework"
+        }
+    ],
     "require": {
         "php": "~8.1.0||~8.2.0",
         "ext-bcmath": "*",
@@ -50,7 +46,7 @@
         "colinmollenhour/credis": "^1.13",
         "colinmollenhour/php-redis-session-abstract": "^1.5",
         "composer/composer": "^2.0, !=2.2.16",
-        "doctrine/annotations": "^2.0",
+        "doctrine/annotations": "^1.13",
         "elasticsearch/elasticsearch": "~7.17.0 || ~8.5.0",
         "ezyang/htmlpurifier": "^4.16",
         "guzzlehttp/guzzle": "^7.5",
@@ -81,7 +77,6 @@
         "magento/composer": "^1.9.0",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
         "magento/magento-composer-installer": ">=0.4.0",
-        "magento/security-package": "dev-develop",
         "magento/zend-cache": "^1.16",
         "magento/zend-db": "^1.16",
         "magento/zend-pdf": "^1.16",
@@ -94,7 +89,7 @@
         "ramsey/uuid": "^4.2",
         "symfony/console": "^5.4",
         "symfony/intl": "^5.4",
-        "symfony/process": "<=5.4.23",
+        "symfony/process": "^5.4",
         "symfony/string": "^5.4",
         "tedivm/jshrink": "^1.4",
         "tubalmartin/cssmin": "^4.1",
@@ -104,18 +99,20 @@
     },
     "require-dev": {
         "allure-framework/allure-phpunit": "^2",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
         "dg/bypass-finals": "^1.4",
-        "friendsofphp/php-cs-fixer": "^3.22",
+        "friendsofphp/php-cs-fixer": "^3.8",
         "lusitanian/oauth": "^0.8",
         "magento/magento-coding-standard": "*",
-        "magento/magento2-functional-testing-framework": "dev-ACQE-5264-spomky-labs/otphp",
+        "magento/magento2-functional-testing-framework": "dev-ACQE-5264-spomky-otphp-upgrade",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
         "phpstan/phpstan": "^1.9",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "<=9.5.22",
         "sebastian/phpcpd": "^6.0",
-        "symfony/finder": "^5.4"
+        "symfony/finder": "^5.4",
+        "sebastian/comparator": "<=4.0.6",
+        "symfony/process": "<=5.4.23"
     },
     "suggest": {
         "ext-pcntl": "Need for run processes in parallel mode"
@@ -261,9 +258,6 @@
         "magento/module-newsletter-graph-ql": "*",
         "magento/module-offline-payments": "*",
         "magento/module-offline-shipping": "*",
-        "magento/module-order-cancellation": "*",
-        "magento/module-order-cancellation-graph-ql": "*",
-        "magento/module-order-cancellation-ui": "*",
         "magento/module-page-cache": "*",
         "magento/module-payment": "*",
         "magento/module-payment-graph-ql": "*",
@@ -408,6 +402,5 @@
             "Magento\\PhpStan\\": "dev/tests/static/framework/Magento/PhpStan/"
         }
     },
-    "prefer-stable": true,
-    "minimum-stability": "dev"
+    "prefer-stable": true
 }
