--- a/composer.json
+++ b/composer.json
@@ -81,7 +81,7 @@
         "laminas/laminas-validator": "^2.23",
         "league/flysystem": "^2.4",
         "league/flysystem-aws-s3-v3": "^2.4",
-        "magento/composer": "dev-AC-9499",
+        "magento/composer": "dev-Hammer_PlatForm_Health_247Beta3",
         "magento/composer-dependency-version-audit-plugin": "^0.1",
         "magento/magento-composer-installer": ">=0.4.0",
         "magento/zend-cache": "^1.16",
@@ -110,7 +110,7 @@
         "dg/bypass-finals": "^1.4",
         "friendsofphp/php-cs-fixer": "^3.22",
         "lusitanian/oauth": "^0.8",
-        "magento/magento-coding-standard": "dev-AC-9670",
+        "magento/magento-coding-standard": "dev-Hammer_PlatForm_Health_247Beta3",
         "magento/magento2-functional-testing-framework": "^4.6",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
